src/test/deca/context/invalid/douDecl_field_01_so.deca
// Description:
//    Teste la double déclaration de champs.
//
// Resultats:
//    Ligne 11: Double déclaration du champs x.
//
// Historique:
//    cree le 20/01/2023
class A{
    int x;
    int x;
}